--- a/LoanManagementSystem/Views/LoanRepayments/CancelLoanRepayments.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/CancelLoanRepayments.cshtml
@@ -152,7 +152,7 @@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => modelItem.Repayments.ElementAt(i).RepaymentCode)
-                                    @Html.EditorFor(modelItem => Model.Repayments.ElementAt(i).RepaymentCode, new { htmlAttributes = new { @class = "form-control" } })
+                                    @*@Html.EditorFor(modelItem => Model.Repayments.ElementAt(i).RepaymentCode, new { htmlAttributes = new { @class = "form-control" } })*@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => modelItem.Repayments.ElementAt(i).PendingPrincipalAmount)
@@ -201,5 +201,5 @@
             </div>
         </div>
     }
-    <input type="submit" value="Save" />
+    <input type="submit" value="Cancel Repayments" />
 }
