--- a/LoanManagementSystem/Views/Member/Edit.cshtml
+++ b/LoanManagementSystem/Views/Member/Edit.cshtml
@@ -274,13 +274,12 @@
     @Html.HiddenFor(model => model.PermanentAddressId)
     @Html.HiddenFor(model => model.PermanentContactId)
     @Html.HiddenFor(model => model.UserGroupId)
-    @Html.HiddenFor(model => model.Contacts.ContactId)
+    @*@Html.HiddenFor(model => model.Contacts.ContactId)*@
     @Html.HiddenFor(model => model.PermanentAddress.AddressId)
     @Html.HiddenFor(model => model.UserType)
-    @Html.HiddenFor(model => model.PermanentContacts.ContactId)
-    @Html.HiddenFor(model => model.GuaranterAddress.AddressId)
-    @Html.HiddenFor(model => model.GuaranterContacts.ContactId)
-    @Html.ValidationSummary(true)
+    @*@Html.HiddenFor(model => model.PermanentContacts.ContactId)*@
+    @*@Html.HiddenFor(model => model.GuaranterAddress.AddressId)*@
+    @*@Html.HiddenFor(model => model.GuaranterContacts.ContactId)*@    
     @Html.HiddenFor(model => model.CompanyId)
     <div class="col-md-3">
         <div class="panel panel-default">
@@ -481,28 +480,28 @@
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.UserAddress.Address1, "Address1", new { @class = "control-label" })
                         @Html.TextBoxFor(model => model.UserAddress.Address1, new { @class = "form-control", @placeholder = "Enter Address Line 1" })
-                        @Html.ValidationMessageFor(model => model.UserAddress.Address1)
+                        @*@Html.ValidationMessageFor(model => model.UserAddress.Address1)*@
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.UserAddress.Address2, "Address2", new { @class = "control-label" })
                         @Html.TextBoxFor(model => model.UserAddress.Address2, new { @class = "form-control", @placeholder = "Enter Address Line 2" })
-                        @Html.ValidationMessageFor(model => model.UserAddress.Address2)
+                        @*@Html.ValidationMessageFor(model => model.UserAddress.Address2)*@
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.UserAddress.Place, "Place", new { @class = "control-label" })
                         @Html.TextBoxFor(model => model.UserAddress.Place, new { @class = "form-control", @placeholder = "Enter Place" })
-                        @Html.ValidationMessageFor(model => model.UserAddress.Place)
+                        @*@Html.ValidationMessageFor(model => model.UserAddress.Place)*@
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.UserAddress.Post, "PO", new { @class = "control-label" })
                         @Html.TextBoxFor(model => model.UserAddress.Post, new { @class = "form-control", @placeholder = "Enter PO" })
-                        @Html.ValidationMessageFor(model => model.UserAddress.Post)
+                        @*@Html.ValidationMessageFor(model => model.UserAddress.Post)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -510,7 +509,7 @@
                         @Html.LabelFor(model => model.UserAddress.CountryId, new { @class = "control-label" })
                         <div id='ddlUserAddressCountry'></div>
                         @Html.HiddenFor(model => model.UserAddress.CountryId, htmlAttributes: new { @class = "form-control", @ID = "hdnUserAddressCountry" })
-                        @Html.ValidationMessageFor(model => model.UserAddress.CountryId)
+                        @*@Html.ValidationMessageFor(model => model.UserAddress.CountryId)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -518,7 +517,7 @@
                         @Html.LabelFor(model => model.UserAddress.StateId, new { @class = "control-label" })
                         <div id='ddlUserAddressState'></div>
                         @Html.HiddenFor(model => model.UserAddress.StateId, htmlAttributes: new { @class = "form-control", @ID = "hdnUserAddressState" })
-                        @Html.ValidationMessageFor(model => model.UserAddress.StateId)
+                        @*@Html.ValidationMessageFor(model => model.UserAddress.StateId)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -526,7 +525,7 @@
                         @Html.LabelFor(model => model.UserAddress.DistrictId, new { @class = "control-label" })
                         <div id='ddlUserAddressDistrict'></div>
                         @Html.HiddenFor(model => model.UserAddress.DistrictId, htmlAttributes: new { @class = "form-control", @ID = "hdnUserAddressDistrict" })
-                        @Html.ValidationMessageFor(model => model.UserAddress.DistrictId)
+                        @*@Html.ValidationMessageFor(model => model.UserAddress.DistrictId)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -534,7 +533,7 @@
                         @Html.LabelFor(model => model.UserAddress.TalukId, new { @class = "control-label" })
                         <div id='ddlUserAddressTaluk'></div>
                         @Html.HiddenFor(model => model.UserAddress.TalukId, htmlAttributes: new { @class = "form-control", @ID = "hdnUserAddressTaluk" })
-                        @Html.ValidationMessageFor(model => model.UserAddress.TalukId)
+                        @*@Html.ValidationMessageFor(model => model.UserAddress.TalukId)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -542,7 +541,7 @@
                         @Html.LabelFor(model => model.UserAddress.VillageId, new { @class = "control-label" })
                         <div id='ddlUserAddressVillage'></div>
                         @Html.HiddenFor(model => model.UserAddress.VillageId, htmlAttributes: new { @class = "form-control", @ID = "hdnUserAddressVillage" })
-                        @Html.ValidationMessageFor(model => model.UserAddress.VillageId)
+                        @*@Html.ValidationMessageFor(model => model.UserAddress.VillageId)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -556,7 +555,7 @@
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.Contacts.Telephone1, "Phone", new { @class = "control-label col-md-2" })
                         @Html.TextBoxFor(model => model.Contacts.Telephone1, new { @class = "form-control", @placeholder = "Enter Phone" })
-                        @Html.ValidationMessageFor(model => model.Contacts.Telephone1)
+                        @*@Html.ValidationMessageFor(model => model.Contacts.Telephone1)*@
                     </div>
                 </div>
             </div>
@@ -586,28 +585,28 @@
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.GuaranterAddress.Address1, "Address", new { @class = "control-label col-md-2" })
                         @Html.TextBoxFor(model => model.GuaranterAddress.Address1, new { @class = "form-control", @placeholder = "Enter Address" })
-                        @Html.ValidationMessageFor(model => model.GuaranterAddress.Address1)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterAddress.Address1)*@
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.GuaranterAddress.Address2, "Address2", new { @class = "control-label" })
                         @Html.TextBoxFor(model => model.GuaranterAddress.Address2, new { @class = "form-control", @placeholder = "Enter Address Line 2" })
-                        @Html.ValidationMessageFor(model => model.GuaranterAddress.Address2)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterAddress.Address2)*@
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.GuaranterAddress.Place, "Place", new { @class = "control-label" })
                         @Html.TextBoxFor(model => model.GuaranterAddress.Place, new { @class = "form-control", @placeholder = "Enter Place" })
-                        @Html.ValidationMessageFor(model => model.GuaranterAddress.Place)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterAddress.Place)*@
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.GuaranterAddress.Post, "PO", new { @class = "control-label" })
                         @Html.TextBoxFor(model => model.GuaranterAddress.Post, new { @class = "form-control", @placeholder = "Enter PO" })
-                        @Html.ValidationMessageFor(model => model.GuaranterAddress.Post)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterAddress.Post)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -615,7 +614,7 @@
                         @Html.LabelFor(model => model.GuaranterAddress.CountryId, new { @class = "control-label" })
                         <div id='ddlGuaranterAddressCountry'></div>
                         @Html.HiddenFor(model => model.GuaranterAddress.CountryId, htmlAttributes: new { @class = "form-control", @ID = "hdnGuaranterAddressCountry" })
-                        @Html.ValidationMessageFor(model => model.GuaranterAddress.CountryId)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterAddress.CountryId)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -623,7 +622,7 @@
                         @Html.LabelFor(model => model.GuaranterAddress.StateId, new { @class = "control-label" })
                         <div id='ddlGuaranterAddressState'></div>
                         @Html.HiddenFor(model => model.GuaranterAddress.StateId, htmlAttributes: new { @class = "form-control", @ID = "hdnGuaranterAddressState" })
-                        @Html.ValidationMessageFor(model => model.GuaranterAddress.StateId)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterAddress.StateId)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -631,7 +630,7 @@
                         @Html.LabelFor(model => model.GuaranterAddress.DistrictId, new { @class = "control-label" })
                         <div id='ddlGuaranterAddressDistrict'></div>
                         @Html.HiddenFor(model => model.GuaranterAddress.DistrictId, htmlAttributes: new { @class = "form-control", @ID = "hdnGuaranterAddressDistrict" })
-                        @Html.ValidationMessageFor(model => model.GuaranterAddress.DistrictId)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterAddress.DistrictId)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -639,7 +638,7 @@
                         @Html.LabelFor(model => model.GuaranterAddress.TalukId, new { @class = "control-label" })
                         <div id='ddlGuaranterAddressTaluk'></div>
                         @Html.HiddenFor(model => model.GuaranterAddress.TalukId, htmlAttributes: new { @class = "form-control", @ID = "hdnGuaranterAddressTaluk" })
-                        @Html.ValidationMessageFor(model => model.GuaranterAddress.TalukId)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterAddress.TalukId)*@
                     </div>
                 </div>
                 <div class="form-group">
@@ -647,14 +646,14 @@
                         @Html.LabelFor(model => model.GuaranterAddress.VillageId, new { @class = "control-label" })
                         <div id='ddlGuaranterAddressVillage'></div>
                         @Html.HiddenFor(model => model.GuaranterAddress.VillageId, htmlAttributes: new { @class = "form-control", @ID = "hdnGuaranterAddressVillage" })
-                        @Html.ValidationMessageFor(model => model.GuaranterAddress.VillageId)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterAddress.VillageId)*@
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-10">
                         @Html.LabelFor(model => model.GuaranterContacts.Telephone1, "Phone", new { @class = "control-label col-md-2" })
                         @Html.TextBoxFor(model => model.GuaranterContacts.Telephone1, new { @class = "form-control", @placeholder = "Enter Phone" })
-                        @Html.ValidationMessageFor(model => model.GuaranterContacts.Telephone1)
+                        @*@Html.ValidationMessageFor(model => model.GuaranterContacts.Telephone1)*@
                     </div>
                 </div>
                 <div class="form-group">
