datae format change

--- a/LoanManagementSystem/Views/Loan/Index.cshtml
+++ b/LoanManagementSystem/Views/Loan/Index.cshtml
@@ -117,7 +117,7 @@
                   { text: 'First Name', dataField: 'FirstName', width: 200 },
                   { text: 'Last Name', dataField: 'LastName', width: 160 },
                   { text: 'Loan Amount', dataField: 'LoanAmount', width: 120 },
-                  { text: 'Loan Date', dataField: 'CreatedOn', cellsFormat: 'd', width: 120 },
+                  { text: 'Loan Date', dataField: 'CreatedOn', cellsFormat: 'dd/M/yyyy', width: 120 },
                   { text: 'Installment Amount', dataField: 'InstallmentAmount', width: 250 },
                   { text: 'Interest Rate', dataField: 'InteresRate', width: 120 },
                   { text: 'Notes', dataField: 'Notes', width: 200 },
