--- a/LoanManagementSystem/Views/Accounting/ListBankDepositWithdrawal.cshtml
+++ b/LoanManagementSystem/Views/Accounting/ListBankDepositWithdrawal.cshtml
@@ -78,7 +78,7 @@
                   { text: 'Voucher Total', dataField: 'VoucherTotal', width: 160 },
                   { text: 'Module', dataField: 'FromModule', width: 150 },
                   { text: 'Transaction Type', dataField: 'Transaction', width: 150 },
-                  { text: 'Date', dataField: 'TransDate', width: 150, format: 'd' },
+                  { text: 'Date', dataField: 'TransDate', width: 150, format: 'dd/M/yyyy' },
                   { text: 'Transaction Id', dataField: 'TransId', width: 150 },
                   { text: 'Narration', dataField: 'Narration', width: 150 },
                   { text: 'Amount', dataField: 'Amount', width: 150 },
